mesa (19.1.0~rc1-1) UNRELEASED; urgency=medium

  * New upstream release candidate.
  * watch: Upstream switched to xz tarballs.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 09 May 2019 14:24:13 +0300

mesa (19.0.3-1) experimental; urgency=medium

  * New upstream release.
  * libgl1-mesa-dri.maintscript: Bump version so that drirc gets removed
    for those who already upgraded to 19.0.

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 08 May 2019 13:46:47 +0300

mesa (19.0.2-1) experimental; urgency=medium

  * New upstream release.
  * control: Bump libdrm-dev build-dep, amdgpu needs 2.4.97.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 11 Apr 2019 11:50:26 +0300

mesa (19.0.1-1) experimental; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 28 Mar 2019 15:38:58 +0200

mesa (19.0.0-1) experimental; urgency=medium

  * New upstream release.
  * meson-fix-with-dri2-def-for-hurd.diff: Restored the original diff to
    fix hurd build.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 14 Mar 2019 18:41:31 +0200

mesa (19.0.0~rc7-1) experimental; urgency=medium

  * New upstream release candidate.
  * Migrate to llvm/clang-8.
  * fix-hurd-ftbfs.diff: Refreshed, and partially replaced by two
    patches from upstream.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 07 Mar 2019 09:58:25 +0200

mesa (19.0.0~rc6-1) experimental; urgency=medium

  * New upstream release candidate. (LP: #1815236)
  * rules: Replace imx with kmsro, fixes arm build.

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 04 Mar 2019 09:26:07 +0200

mesa (19.0.0~rc5-1) experimental; urgency=medium

  * New upstream release candidate.
  * libgbm1.symbols: Updated.

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 20 Feb 2019 14:02:45 +0200

mesa (19.0.0~rc2-1) experimental; urgency=medium

  * New upstream snapshot.
  * 1-5-meson-remove-duplicate-definition.patch: Dropped, upstream.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 08 Feb 2019 10:44:48 +0200
